# ChemGAPP

./: .gitignore  README.md  requirements.txt  setup.cfg
ChemGAPP_APPs/ChemGAPP_Big/: ChemGAPP_Big.py  requirements.txt
ChemGAPP_APPs/ChemGAPP_Big/pages/: Optional_File_Renamer.py  Step_1_Normalisation.py  Step_2_Threshold_Selector.py  Step_3_S_Score_Calculator.py  Step_4_Dataset_Comparison.py
ChemGAPP_APPs/ChemGAPP_GI/: ChemGAPP_GI.py  requirements.txt
ChemGAPP_APPs/ChemGAPP_GI/pages/: Step_1_Interaction_Scores.py  Step_2_Bar_Plot.py
ChemGAPP_APPs/ChemGAPP_Small/: ChemGAPP_Small.py  requirements.txt
ChemGAPP_APPs/ChemGAPP_Small/Pages/: Optional_File_Renamer.py  Step_1_ChemGAPP_Small.py
ChemGAPP_Package/: Dependencies.txt  README.md  __init__.py  requirements.txt
ChemGAPP_Package/ChemGAPP_Big/: .gitattributes  Add_Gene_Names  Add_Gene_Names.py  Bar_Plot_Conditions  Bar_Plot_Conditions.py  Bar_Plot_Plates  Bar_Plot_Plates.py  Check_Normalisation  Check_Normalisation.py  Condition_Variance  Condition_Variance.py  Cosine_Similarity  Cosine_Similarity.py  Iris_to_Dataset  Iris_to_Dataset.py  MW_Conditions_to_Remove  MW_Conditions_to_Remove.py  MW_Plates_to_Remove  MW_Plates_to_Remove.py  Mann_Whitney_Condition_Level  Mann_Whitney_Condition_Level.py  Mann_Whitney_Plate_Level  Mann_Whitney_Plate_Level.py  Pass_Fail_Conditions  Pass_Fail_Conditions.py  Pass_Fail_Plates  Pass_Fail_Plates.py  S_Scores  S_Scores.py  Variance_Conditions_to_Remove  Variance_Conditions_to_Remove.py  Z_Plates_to_Remove  Z_Plates_to_Remove.py  Z_Score  Z_Score.py  Z_Score_Count  Z_Score_Count.py  __init__.py
ChemGAPP_Package/ChemGAPP_GI/: GI_Barplot.py  GI_Dataset.py  __init__.py
ChemGAPP_Package/ChemGAPP_Small/: ChemGAPP_Small.py  __init__.py
ChemGAPP_Package/Test_Files/ChemGAPP_Big/: Operon_Cluster.csv
ChemGAPP_Package/Test_Files/ChemGAPP_GI/: SecondaryGene_B.JPG.iris
ChemGAPP_Package/Test_Files/ChemGAPP_Small/: CONDITION1-1 mM-1_A.JPG.iris  CONDITION2--1-1_A.JPG.iris  CONDITION2--1-1_B.JPG.iris  CONDITION3-0 mgmL-1_A.JPG.iris  CONDITION4-1 %-1_A.JPG.iris  CONDITION5-42-1_A.JPG.iris  CONDITION5-42-1_B.JPG.iris  CONDITION5-50 mgmL-1_A.JPG.iris
ChemGAPP_Package/src/ChemGAPP_Big/: Add_Gene_Names.py  Bar_Plot_Conditions.py  Bar_Plot_Plates.py  Check_Normalisation.py  Condition_Variance.py  Cosine_Similarity.py  Iris_to_Dataset.py  MW_Conditions_to_Remove.py  MW_Plates_to_Remove.py  Mann_Whitney_Condition_Level.py  Mann_Whitney_Plate_Level.py  Pass_Fail_Conditions.py  Pass_Fail_Plates.py  S_Scores.py  Variance_Conditions_to_Remove.py  Z_Plates_to_Remove.py  Z_Score.py  Z_Score_Count.py
ChemGAPP_Package/src/ChemGAPP_GI/: GI_Barplot.py  GI_Dataset.py
Test_Files/ChemGAPP_GI/: SecondaryGene_A.JPG.iris  platA.txt
Test_Files/ChemGAPP_Small/: CONDITION1-0,5 mM-1_A.JPG.iris  CONDITION3-50 mgmL-1_A.JPG.iris  CONDITION4-0,5 %-1_A.JPG.iris  plat1.txt
(+246 files in other folders)
