[metadata]
name = ChemGAPP
version = file: ChemGAPP_Package/VERSION
description = A package for the analysis of chemical genomic screen data
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/HannahMDoherty/ChemGAPP
author = Hannah May Doherty
author_email = hxd476@student.bham.ac.uk
license = by-nc-nd-4.0
license_file = LICENSE
classifiers =
    License :: Other/Proprietary License
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls = 
    Source = https://github.com/HannahMDoherty/ChemGAPP

[options]
platforms = any
python_requires = >=3.7
setup_requires =
    setuptools_scm
install_requires=
    streamlit==1.10.0
    seaborn==0.11.2
    matplotlib==3.6.0
    scikit-learn==0.24.1
    more-itertools==8.7.0
    pathlib2==2.3.5
    scipy==1.6.2
    regex==2022.9.13
    random2==1.0.1
    pickle-mixin==1.0.2
    bioinfokit==2.1.0
    statannotations==0.4.4
packages=
    ChemGAPP_Package.ChemGAPP_Big
    ChemGAPP_Package.ChemGAPP_Small
    ChemGAPP_Package.ChemGAPP_GI

[options.entry_points]
console_scripts =
    add_gene_names = ChemGAPP_Package.ChemGAPP_Big.Add_Gene_Names:main
    bar_plot_conditions = ChemGAPP_Package.ChemGAPP_Big.Bar_Plot_Conditions:main
    bar_plot_plates = ChemGAPP_Package.ChemGAPP_Big.Bar_Plot_Plates:main
    check_normalisation = ChemGAPP_Package.ChemGAPP_Big.Check_Normalisation:main
    condition_variance = ChemGAPP_Package.ChemGAPP_Big.Condition_Variance:main
    cosine_similarity = ChemGAPP_Package.ChemGAPP_Big.Cosine_Similarity:main
    iris_to_dataset = ChemGAPP_Package.ChemGAPP_Big.Iris_to_Dataset:main
    mw_conditions_to_remove = ChemGAPP_Package.ChemGAPP_Big.MW_Conditions_to_Remove:main
    mw_plates_to_remove = ChemGAPP_Package.ChemGAPP_Big.MW_Plates_to_Remove:main
    mw_condition_level = ChemGAPP_Package.ChemGAPP_Big.Mann_Whitney_Condition_Level:main
    mw_plate_level = ChemGAPP_Package.ChemGAPP_Big.Mann_Whitney_Plate_Level:main
    pass_fail_conditions = ChemGAPP_Package.ChemGAPP_Big.Pass_Fail_Conditions:main
    pass_fail_plates = ChemGAPP_Package.ChemGAPP_Big.Pass_Fail_Plates:main
    s_scores = ChemGAPP_Package.ChemGAPP_Big.S_Scores:main
    variance_conditions_to_remove = ChemGAPP_Package.ChemGAPP_Big.Variance_Conditions_to_Remove:main
    z_plates_to_remove = ChemGAPP_Package.ChemGAPP_Big.Z_Plates_to_Remove:main
    z_score = ChemGAPP_Package.ChemGAPP_Big.Z_Score:main
    z_score_count = ChemGAPP_Package.ChemGAPP_Big.Z_Score_Count:main
    chemgapp_small = ChemGAPP_Package.ChemGAPP_Small.ChemGAPP_Small:main
    gi_barplot = ChemGAPP_Package.ChemGAPP_GI.GI_Barplot:main
    gi_dataset = ChemGAPP_Package.ChemGAPP_GI.GI_Dataset:main